the_project/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-do
  template:
    metadata:
      labels:
        app: to-do
    spec:
      volumes:
        - name: image-volume
          persistentVolumeClaim: 
            claimName: log-output-claim    
      containers:
        - name: to-do
          image: vladibo/todo-app:0.1.6
          volumeMounts: 
          - name: image-volume
            mountPath: /tmp/kube
