the_project/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-svc
spec:
  type: NodePort
  selector:
    app: to-do # This is the app as declared in the deployment.
  ports:
    - name: http
      nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 3001 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3001 # This is the target port
